--- a/src/App.scss
+++ b/src/App.scss
@@ -1,17 +1,46 @@
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  div {
-    color: lightblue;
-  }
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 80px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App-header {
+  background-color: #222;
+  height: 150px;
+  padding: 20px;
+  color: white;
+}
+
+.App-intro {
+  font-size: large;
+}
+
+form{
+
+  margin: 10px;
+
+}
+label, input{
+  display: block;
+  margin: 10px;
+}
+
+input{
+
+  padding: 10px 3px;
+   
+}
+
+input[type='submit']{
+  padding: 10px 20px;
+  border-radius: 5px;
+  background: #DDDDDD;
+  color: #000000;
+  border: none;
+  cursor: pointer;
+}
+
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
